--- a/style.css
+++ b/style.css
@@ -1,6 +1,62 @@
+body {
+  background-color: #f9f7fe;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
+  font-size: 36px;
+  margin-top: 5px;
   text-align: center;
 }
+
+h2 {
+  font-size: 28px;
+  margin: 0 0 4px;
+}
+
+select {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+  border-radius: 4px;
+}
+
 footer {
+  color: rgba(0, 0, 0, 0.8);
   text-align: center;
+}
+
+.container {
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin: 60px auto;
+  max-width: 600px;
+  padding: 30px;
+}
+
+.current-city {
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  margin: 5px 0;
+  padding: 25px 5px;
+}
+
+.current-city:last-child {
+  border: none;
+}
+
+.current-date {
+  opacity: 0.8;
+}
+
+.current-time {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.current-time small {
+  font-size: 24px;
+  vertical-align: middle;
 }
